--- a/Metody numeryczne 2021/Laboratorium 1/sprawozdanie.ipynb
+++ b/Metody numeryczne 2021/Laboratorium 1/sprawozdanie.ipynb
@@ -48,9 +48,20 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Wektor:\n[1 2 3]\nDługość: 3\nRozmiar: (3,) \n\nMacierz:\n[[1 2 3]\n [4 5 6]\n [7 8 9]]\nRozmiar: (3, 3)\n"
+     "output_type": "stream",
+     "text": [
+      "Wektor:\n",
+      "[1 2 3]\n",
+      "Długość: 3\n",
+      "Rozmiar: (3,) \n",
+      "\n",
+      "Macierz:\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "Rozmiar: (3, 3)\n"
+     ]
     }
    ],
    "source": [
@@ -71,7 +82,7 @@
    "metadata": {},
    "source": [
     "***Zadanie 1.***  \n",
-    "Zaimplementuj funkcję $cylinder\\_area$ tak by zwracała pole powierzchni walca o promieniu podstawy $r$ i wysokości $h$. Stała $\\pi$ jest zdefiniowana np. w bibliotece *[math](https://docs.python.org/3/library/math.html#constants)*. Jeżeli nie da się policzyć pola funkcja powinna zwracać wartość *NaN*. Sprawdź działanie zaimplementowanej funkcji dla dowolnych wartości w tym notatniku."
+    "Zaimplementuj funkcję $cylinder\\_area$ tak by zwracała pole powierzchni walca o promieniu podstawy $r$ i wysokości $h$. Stała $\\pi$ jest zdefiniowana np. w bibliotece *[math](https://docs.python.org/3/library/math.html#constants)*. Jeżeli nie da się policzyć pola funkcja powinna zwracać wartość *NaN*. Sprawdź działanie zaimplementowanej funkcji dla dowolnych wartości w tym notatniku.\n"
    ]
   },
   {
@@ -81,6 +92,30 @@
     "***Zadanie 2.***  \n",
     "Wygeneruj dowolne ciągi arytmetyczny o kroku różnym od jeden i niebędącym liczbą całkowitą, używając w tym celu funkcji *[arange](https://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html)* oraz *[linspace](https://docs.scipy.org/doc/numpy-1.10.0/reference/generated/numpy.linspace.html)*. Wypisz go i przeanalizuj otrzymane rezultaty."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.2 3.2 5.2] [1.2 3.5 5.8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(1.2,5.8,2) # odpowiednik operacji wektor = start:skok:stop w MATLABie\n",
+    "b = np.linspace(1.2,5.8,num = 3) # odpowiednik linspace w MATLABie\n",
+    "print(a, b)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "source": [
@@ -111,16 +146,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true,
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Wektor poziomy:\n [1 2 3]\nWektor pionowy:\n [[1]\n [2]\n [3]]\nMacierz:\n [[1 2]\n [3 4]]\n"
+     "output_type": "stream",
+     "text": [
+      "Wektor poziomy:\n",
+      " [1 2 3]\n",
+      "Wektor pionowy:\n",
+      " [[1]\n",
+      " [2]\n",
+      " [3]]\n",
+      "Macierz:\n",
+      " [[1 2]\n",
+      " [3 4]]\n"
+     ]
     }
    ],
    "source": [
@@ -163,15 +208,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Macierz P=\n[[1 3 2]\n [3 4 6]\n [7 8 9]]\nElementy trzeciej kolumny:\n [2 6 9]\nElementy trzeciego wiersza:\n [7 8 9]\n"
+     "output_type": "stream",
+     "text": [
+      "Macierz P=\n",
+      "[[1 3 2]\n",
+      " [3 4 6]\n",
+      " [7 8 9]]\n",
+      "Elementy trzeciej kolumny:\n",
+      " [2 6 9]\n",
+      "Elementy trzeciego wiersza:\n",
+      " [7 8 9]\n"
+     ]
     }
    ],
    "source": [
@@ -194,6 +248,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 1 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = np.array([[3 , 1 , -2 , 4],\n",
+    "              [0 , 1 , 1 , 5],\n",
+    "              [-2 , 1 , 1 , 6],\n",
+    "              [4 , 3 , 0 , 1]])\n",
+    "print(M[0][0], M[2][2], M[2][1])\n",
+    "w1 = M[:, 2]\n",
+    "w2 = M[1,:]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "source": [
     "***Zadanie 6.***   \n",
     "Uzupełnij funkcję $custom\\_matrix$, tak by parametry m, n określały wymiary macierzy wynikowej, która\n",
@@ -208,15 +290,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "zero_matrix: \n[[0. 0.]\n [0. 0.]]\nones_matrix: \n[[1.]\n [1.]\n [1.]]\n"
+     "output_type": "stream",
+     "text": [
+      "zero_matrix: \n",
+      "[[0. 0.]\n",
+      " [0. 0.]]\n",
+      "ones_matrix: \n",
+      "[[1.]\n",
+      " [1.]\n",
+      " [1.]]\n"
+     ]
     }
    ],
    "source": [
@@ -249,6 +339,53 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4]\n",
+      " [12]\n",
+      " [52]]\n",
+      "[[-6]\n",
+      " [-3]\n",
+      " [ 4]]\n",
+      "[[  8]\n",
+      " [ 15]\n",
+      " [-26]]\n",
+      "[[  8   5  -2]\n",
+      " [ 24  15  -6]\n",
+      " [104  65 -26]]\n",
+      "[[  8   5  -2]\n",
+      " [ 24  15  -6]\n",
+      " [104  65 -26]]\n",
+      "[[  8]\n",
+      " [ 15]\n",
+      " [-26]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = np.array([[1], [3], [13]])\n",
+    "v2 = np.array([[8], [5], [-2]])\n",
+    "print(4 * v1)\n",
+    "print(-v2 + np.array([[2], [2], [2]]))\n",
+    "print(np.multiply(v1, v2))\n",
+    "# transponuję wektor v2 ponieważ w przeciwnym przypadku jest błąd - nie można tak mnożyć macierzy\n",
+    "print(np.dot(v1, v2.T))\n",
+    "print(v1 @ v2.T) # działa jak mnożenie macierzowe\n",
+    "print(v1 * v2) # dziala jak mnożenie Hadamarda"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "source": [
     "***Zadanie 8.***\n",
     "Zainicjalizować macierz $M_1$:\n",
@@ -266,8 +403,51 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  3 -21   9]\n",
+      " [-36   9  12]\n",
+      " [ 15  39  -9]]\n",
+      "[[  4. -20.  10.]\n",
+      " [-35.  10.  13.]\n",
+      " [ 16.  40.  -8.]]\n",
+      "[[  1 -12   5]\n",
+      " [ -7   3  13]\n",
+      " [  3   4  -3]]\n",
+      "[[19]\n",
+      " [49]\n",
+      " [ 5]]\n",
+      "[[-62 -67  50]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M1 = np.array([[1, -7, 3], [-12, 3, 4], [5, 13, -3]])\n",
+    "print(3*M1)\n",
+    "print(3*M1 + np.ones((3,3)))\n",
+    "print(M1.T)\n",
+    "print(M1 @ v1)\n",
+    "print(v2.T @ M1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Materiały uzupełniające:\n",
     "- [Scipy Lecture Notes](http://www.scipy-lectures.org/index.html)\n",
@@ -278,7 +458,8 @@
     "- [Anaconda](https://www.anaconda.com/)\n",
     "- [Learn Python for Data Science](https://www.datacamp.com/learn-python-with-anaconda?utm_source=Anaconda_download&utm_campaign=datacamp_training&utm_medium=banner)\n",
     "- [Learn Python](https://www.learnpython.org/)\n",
-    "- [Wujek Google](https://google.pl) i [Ciocia Wikipedia](https://pl.wikipedia.org/wiki/Wikipedia:Strona_g%C5%82%C3%B3wna)"
+    "- [Wujek Google](https://google.pl) i [Ciocia Wikipedia](https://pl.wikipedia.org/wiki/Wikipedia:Strona_g%C5%82%C3%B3wna)\n",
+    "\n"
    ]
   }
  ],
